k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: microshop
  annotations:
    argocd-image-updater.argoproj.io/image-list: backend=ghcr.io/devopspankaj77/microshop/backend
    argocd-image-updater.argoproj.io/backend.update-strategy: digest
    argocd-image-updater.argoproj.io/backend.allow-tags: regexp:^sha-[0-9a-f]{7}$
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/devopspankaj77/microshop/backend:sha-abcdef1 # ArgoCD update karega
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: microshop
  labels:
    app: backend
spec:
  selector:
    app: backend   # 👈 ye selector tere backend Deployment ke labels se match hona chahiye
  ports:
    - name: http
      port: 8080        # 👈 ClusterIP pe ye port expose hoga
      targetPort: 8080  # 👈 Pod ka containerPort jo tu Deployment me diya hai
  type: ClusterIP
