k8s/VS-Destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: microshop
spec:
  hosts:
    - "microshop.local"
  gateways:
    - microshop-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            subset: primary
          weight: 100
        - destination:
            host: frontend
            subset: canary
          weight: 0
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
  namespace: microshop
spec:
  host: frontend
  subsets:
    - name: primary
      labels:
        app: frontend
        role: primary
    - name: canary
      labels:
        app: frontend
        role: canary
