k8s/istiogateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: microshop-gateway
  namespace: microshop
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - microshop.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend
  namespace: microshop
spec:
  hosts:
  - microshop.local
  gateways:
  - microshop-gateway
  http:
  - route:
    - destination:
        host: backend
        subset: primary
      weight: 100
    - destination:
        host: backend
        subset: canary
      weight: 0
